# classifier-demo

./: .gitignore  README.md  evaluate.py  main.py  optimize.py  pyproject.toml  ragas_eval.py
data/: sentiment_dataset.json
src/classifier_demo/: __init__.py  analyzer.py  config.py  optimization.py  validators.py
